parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> expression
Rule 1     expression -> LPAREN expression RPAREN
Rule 2     expression -> POUND expression tuple
Rule 3     expression -> expression LBRACKET expression RBRACKET
Rule 4     expression -> list
Rule 5     expression -> tuple
Rule 6     series -> series COMMA expression
Rule 7     series -> expression
Rule 8     list -> LBRACKET series RBRACKET
Rule 9     list -> LBRACKET RBRACKET
Rule 10    tuple -> LPAREN series RPAREN
Rule 11    tuple -> LPAREN RPAREN
Rule 12    expression -> NOT expression
Rule 13    expression -> expression PLUS expression
Rule 14    expression -> expression MINUS expression
Rule 15    expression -> expression TIMES expression
Rule 16    expression -> expression DIVIDE expression
Rule 17    expression -> expression EXP expression
Rule 18    expression -> expression MOD expression
Rule 19    expression -> expression DIV expression
Rule 20    expression -> expression IN expression
Rule 21    expression -> expression CONC expression
Rule 22    expression -> expression LESS expression
Rule 23    expression -> expression MORE expression
Rule 24    expression -> expression EQUAL expression
Rule 25    expression -> expression NOTEQUAL expression
Rule 26    expression -> expression LESSE expression
Rule 27    expression -> expression MOREE expression
Rule 28    expression -> expression ANDALSO expression
Rule 29    expression -> expression ORELSE expression
Rule 30    expression -> NUMBER
Rule 31    expression -> STRING
Rule 32    expression -> BOOLEAN
Rule 33    expression -> expression SEMI

Terminals, with rules where they appear

ANDALSO              : 28
BOOLEAN              : 32
COMMA                : 6
CONC                 : 21
DIV                  : 19
DIVIDE               : 16
EQUAL                : 24
EXP                  : 17
IN                   : 20
LBRACKET             : 3 8 9
LESS                 : 22
LESSE                : 26
LPAREN               : 1 10 11
MINUS                : 14
MOD                  : 18
MORE                 : 23
MOREE                : 27
NOT                  : 12
NOTEQUAL             : 25
NUMBER               : 30
ORELSE               : 29
PLUS                 : 13
POUND                : 2
RBRACKET             : 3 8 9
RPAREN               : 1 10 11
SEMI                 : 33
STRING               : 31
TIMES                : 15
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 3 3 6 7 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 33 0
list                 : 4
series               : 6 8 10
tuple                : 2 5

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . POUND expression tuple
    (3) expression -> . expression LBRACKET expression RBRACKET
    (4) expression -> . list
    (5) expression -> . tuple
    (12) expression -> . NOT expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EXP expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression IN expression
    (21) expression -> . expression CONC expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression EQUAL expression
    (25) expression -> . expression NOTEQUAL expression
    (26) expression -> . expression LESSE expression
    (27) expression -> . expression MOREE expression
    (28) expression -> . expression ANDALSO expression
    (29) expression -> . expression ORELSE expression
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . BOOLEAN
    (33) expression -> . expression SEMI
    (8) list -> . LBRACKET series RBRACKET
    (9) list -> . LBRACKET RBRACKET
    (10) tuple -> . LPAREN series RPAREN
    (11) tuple -> . LPAREN RPAREN

    LPAREN          shift and go to state 2
    POUND           shift and go to state 3
    NOT             shift and go to state 7
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    BOOLEAN         shift and go to state 10
    LBRACKET        shift and go to state 5

    expression                     shift and go to state 1
    tuple                          shift and go to state 4
    list                           shift and go to state 6

state 1

    (0) S' -> expression .
    (3) expression -> expression . LBRACKET expression RBRACKET
    (13) expression -> expression . PLUS expression
    (14) expression -> expression . MINUS expression
    (15) expression -> expression . TIMES expression
    (16) expression -> expression . DIVIDE expression
    (17) expression -> expression . EXP expression
    (18) expression -> expression . MOD expression
    (19) expression -> expression . DIV expression
    (20) expression -> expression . IN expression
    (21) expression -> expression . CONC expression
    (22) expression -> expression . LESS expression
    (23) expression -> expression . MORE expression
    (24) expression -> expression . EQUAL expression
    (25) expression -> expression . NOTEQUAL expression
    (26) expression -> expression . LESSE expression
    (27) expression -> expression . MOREE expression
    (28) expression -> expression . ANDALSO expression
    (29) expression -> expression . ORELSE expression
    (33) expression -> expression . SEMI

    LBRACKET        shift and go to state 11
    PLUS            shift and go to state 12
    MINUS           shift and go to state 13
    TIMES           shift and go to state 14
    DIVIDE          shift and go to state 15
    EXP             shift and go to state 16
    MOD             shift and go to state 17
    DIV             shift and go to state 18
    IN              shift and go to state 19
    CONC            shift and go to state 20
    LESS            shift and go to state 21
    MORE            shift and go to state 22
    EQUAL           shift and go to state 23
    NOTEQUAL        shift and go to state 24
    LESSE           shift and go to state 25
    MOREE           shift and go to state 26
    ANDALSO         shift and go to state 27
    ORELSE          shift and go to state 28
    SEMI            shift and go to state 29


state 2

    (1) expression -> LPAREN . expression RPAREN
    (10) tuple -> LPAREN . series RPAREN
    (11) tuple -> LPAREN . RPAREN
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . POUND expression tuple
    (3) expression -> . expression LBRACKET expression RBRACKET
    (4) expression -> . list
    (5) expression -> . tuple
    (12) expression -> . NOT expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EXP expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression IN expression
    (21) expression -> . expression CONC expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression EQUAL expression
    (25) expression -> . expression NOTEQUAL expression
    (26) expression -> . expression LESSE expression
    (27) expression -> . expression MOREE expression
    (28) expression -> . expression ANDALSO expression
    (29) expression -> . expression ORELSE expression
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . BOOLEAN
    (33) expression -> . expression SEMI
    (6) series -> . series COMMA expression
    (7) series -> . expression
    (8) list -> . LBRACKET series RBRACKET
    (9) list -> . LBRACKET RBRACKET
    (10) tuple -> . LPAREN series RPAREN
    (11) tuple -> . LPAREN RPAREN

    RPAREN          shift and go to state 31
    LPAREN          shift and go to state 2
    POUND           shift and go to state 3
    NOT             shift and go to state 7
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    BOOLEAN         shift and go to state 10
    LBRACKET        shift and go to state 5

    expression                     shift and go to state 30
    series                         shift and go to state 32
    tuple                          shift and go to state 4
    list                           shift and go to state 6

state 3

    (2) expression -> POUND . expression tuple
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . POUND expression tuple
    (3) expression -> . expression LBRACKET expression RBRACKET
    (4) expression -> . list
    (5) expression -> . tuple
    (12) expression -> . NOT expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EXP expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression IN expression
    (21) expression -> . expression CONC expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression EQUAL expression
    (25) expression -> . expression NOTEQUAL expression
    (26) expression -> . expression LESSE expression
    (27) expression -> . expression MOREE expression
    (28) expression -> . expression ANDALSO expression
    (29) expression -> . expression ORELSE expression
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . BOOLEAN
    (33) expression -> . expression SEMI
    (8) list -> . LBRACKET series RBRACKET
    (9) list -> . LBRACKET RBRACKET
    (10) tuple -> . LPAREN series RPAREN
    (11) tuple -> . LPAREN RPAREN

    LPAREN          shift and go to state 2
    POUND           shift and go to state 3
    NOT             shift and go to state 7
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    BOOLEAN         shift and go to state 10
    LBRACKET        shift and go to state 5

    expression                     shift and go to state 33
    tuple                          shift and go to state 4
    list                           shift and go to state 6

state 4

    (5) expression -> tuple .

    LBRACKET        reduce using rule 5 (expression -> tuple .)
    PLUS            reduce using rule 5 (expression -> tuple .)
    MINUS           reduce using rule 5 (expression -> tuple .)
    TIMES           reduce using rule 5 (expression -> tuple .)
    DIVIDE          reduce using rule 5 (expression -> tuple .)
    EXP             reduce using rule 5 (expression -> tuple .)
    MOD             reduce using rule 5 (expression -> tuple .)
    DIV             reduce using rule 5 (expression -> tuple .)
    IN              reduce using rule 5 (expression -> tuple .)
    CONC            reduce using rule 5 (expression -> tuple .)
    LESS            reduce using rule 5 (expression -> tuple .)
    MORE            reduce using rule 5 (expression -> tuple .)
    EQUAL           reduce using rule 5 (expression -> tuple .)
    NOTEQUAL        reduce using rule 5 (expression -> tuple .)
    LESSE           reduce using rule 5 (expression -> tuple .)
    MOREE           reduce using rule 5 (expression -> tuple .)
    ANDALSO         reduce using rule 5 (expression -> tuple .)
    ORELSE          reduce using rule 5 (expression -> tuple .)
    SEMI            reduce using rule 5 (expression -> tuple .)
    $end            reduce using rule 5 (expression -> tuple .)
    RPAREN          reduce using rule 5 (expression -> tuple .)
    COMMA           reduce using rule 5 (expression -> tuple .)
    LPAREN          reduce using rule 5 (expression -> tuple .)
    RBRACKET        reduce using rule 5 (expression -> tuple .)


state 5

    (8) list -> LBRACKET . series RBRACKET
    (9) list -> LBRACKET . RBRACKET
    (6) series -> . series COMMA expression
    (7) series -> . expression
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . POUND expression tuple
    (3) expression -> . expression LBRACKET expression RBRACKET
    (4) expression -> . list
    (5) expression -> . tuple
    (12) expression -> . NOT expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EXP expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression IN expression
    (21) expression -> . expression CONC expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression EQUAL expression
    (25) expression -> . expression NOTEQUAL expression
    (26) expression -> . expression LESSE expression
    (27) expression -> . expression MOREE expression
    (28) expression -> . expression ANDALSO expression
    (29) expression -> . expression ORELSE expression
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . BOOLEAN
    (33) expression -> . expression SEMI
    (8) list -> . LBRACKET series RBRACKET
    (9) list -> . LBRACKET RBRACKET
    (10) tuple -> . LPAREN series RPAREN
    (11) tuple -> . LPAREN RPAREN

    RBRACKET        shift and go to state 35
    LPAREN          shift and go to state 2
    POUND           shift and go to state 3
    NOT             shift and go to state 7
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    BOOLEAN         shift and go to state 10
    LBRACKET        shift and go to state 5

    series                         shift and go to state 34
    expression                     shift and go to state 36
    tuple                          shift and go to state 4
    list                           shift and go to state 6

state 6

    (4) expression -> list .

    LBRACKET        reduce using rule 4 (expression -> list .)
    PLUS            reduce using rule 4 (expression -> list .)
    MINUS           reduce using rule 4 (expression -> list .)
    TIMES           reduce using rule 4 (expression -> list .)
    DIVIDE          reduce using rule 4 (expression -> list .)
    EXP             reduce using rule 4 (expression -> list .)
    MOD             reduce using rule 4 (expression -> list .)
    DIV             reduce using rule 4 (expression -> list .)
    IN              reduce using rule 4 (expression -> list .)
    CONC            reduce using rule 4 (expression -> list .)
    LESS            reduce using rule 4 (expression -> list .)
    MORE            reduce using rule 4 (expression -> list .)
    EQUAL           reduce using rule 4 (expression -> list .)
    NOTEQUAL        reduce using rule 4 (expression -> list .)
    LESSE           reduce using rule 4 (expression -> list .)
    MOREE           reduce using rule 4 (expression -> list .)
    ANDALSO         reduce using rule 4 (expression -> list .)
    ORELSE          reduce using rule 4 (expression -> list .)
    SEMI            reduce using rule 4 (expression -> list .)
    $end            reduce using rule 4 (expression -> list .)
    RPAREN          reduce using rule 4 (expression -> list .)
    COMMA           reduce using rule 4 (expression -> list .)
    LPAREN          reduce using rule 4 (expression -> list .)
    RBRACKET        reduce using rule 4 (expression -> list .)


state 7

    (12) expression -> NOT . expression
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . POUND expression tuple
    (3) expression -> . expression LBRACKET expression RBRACKET
    (4) expression -> . list
    (5) expression -> . tuple
    (12) expression -> . NOT expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EXP expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression IN expression
    (21) expression -> . expression CONC expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression EQUAL expression
    (25) expression -> . expression NOTEQUAL expression
    (26) expression -> . expression LESSE expression
    (27) expression -> . expression MOREE expression
    (28) expression -> . expression ANDALSO expression
    (29) expression -> . expression ORELSE expression
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . BOOLEAN
    (33) expression -> . expression SEMI
    (8) list -> . LBRACKET series RBRACKET
    (9) list -> . LBRACKET RBRACKET
    (10) tuple -> . LPAREN series RPAREN
    (11) tuple -> . LPAREN RPAREN

    LPAREN          shift and go to state 2
    POUND           shift and go to state 3
    NOT             shift and go to state 7
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    BOOLEAN         shift and go to state 10
    LBRACKET        shift and go to state 5

    expression                     shift and go to state 37
    tuple                          shift and go to state 4
    list                           shift and go to state 6

state 8

    (30) expression -> NUMBER .

    LBRACKET        reduce using rule 30 (expression -> NUMBER .)
    PLUS            reduce using rule 30 (expression -> NUMBER .)
    MINUS           reduce using rule 30 (expression -> NUMBER .)
    TIMES           reduce using rule 30 (expression -> NUMBER .)
    DIVIDE          reduce using rule 30 (expression -> NUMBER .)
    EXP             reduce using rule 30 (expression -> NUMBER .)
    MOD             reduce using rule 30 (expression -> NUMBER .)
    DIV             reduce using rule 30 (expression -> NUMBER .)
    IN              reduce using rule 30 (expression -> NUMBER .)
    CONC            reduce using rule 30 (expression -> NUMBER .)
    LESS            reduce using rule 30 (expression -> NUMBER .)
    MORE            reduce using rule 30 (expression -> NUMBER .)
    EQUAL           reduce using rule 30 (expression -> NUMBER .)
    NOTEQUAL        reduce using rule 30 (expression -> NUMBER .)
    LESSE           reduce using rule 30 (expression -> NUMBER .)
    MOREE           reduce using rule 30 (expression -> NUMBER .)
    ANDALSO         reduce using rule 30 (expression -> NUMBER .)
    ORELSE          reduce using rule 30 (expression -> NUMBER .)
    SEMI            reduce using rule 30 (expression -> NUMBER .)
    $end            reduce using rule 30 (expression -> NUMBER .)
    RPAREN          reduce using rule 30 (expression -> NUMBER .)
    COMMA           reduce using rule 30 (expression -> NUMBER .)
    LPAREN          reduce using rule 30 (expression -> NUMBER .)
    RBRACKET        reduce using rule 30 (expression -> NUMBER .)


state 9

    (31) expression -> STRING .

    LBRACKET        reduce using rule 31 (expression -> STRING .)
    PLUS            reduce using rule 31 (expression -> STRING .)
    MINUS           reduce using rule 31 (expression -> STRING .)
    TIMES           reduce using rule 31 (expression -> STRING .)
    DIVIDE          reduce using rule 31 (expression -> STRING .)
    EXP             reduce using rule 31 (expression -> STRING .)
    MOD             reduce using rule 31 (expression -> STRING .)
    DIV             reduce using rule 31 (expression -> STRING .)
    IN              reduce using rule 31 (expression -> STRING .)
    CONC            reduce using rule 31 (expression -> STRING .)
    LESS            reduce using rule 31 (expression -> STRING .)
    MORE            reduce using rule 31 (expression -> STRING .)
    EQUAL           reduce using rule 31 (expression -> STRING .)
    NOTEQUAL        reduce using rule 31 (expression -> STRING .)
    LESSE           reduce using rule 31 (expression -> STRING .)
    MOREE           reduce using rule 31 (expression -> STRING .)
    ANDALSO         reduce using rule 31 (expression -> STRING .)
    ORELSE          reduce using rule 31 (expression -> STRING .)
    SEMI            reduce using rule 31 (expression -> STRING .)
    $end            reduce using rule 31 (expression -> STRING .)
    RPAREN          reduce using rule 31 (expression -> STRING .)
    COMMA           reduce using rule 31 (expression -> STRING .)
    LPAREN          reduce using rule 31 (expression -> STRING .)
    RBRACKET        reduce using rule 31 (expression -> STRING .)


state 10

    (32) expression -> BOOLEAN .

    LBRACKET        reduce using rule 32 (expression -> BOOLEAN .)
    PLUS            reduce using rule 32 (expression -> BOOLEAN .)
    MINUS           reduce using rule 32 (expression -> BOOLEAN .)
    TIMES           reduce using rule 32 (expression -> BOOLEAN .)
    DIVIDE          reduce using rule 32 (expression -> BOOLEAN .)
    EXP             reduce using rule 32 (expression -> BOOLEAN .)
    MOD             reduce using rule 32 (expression -> BOOLEAN .)
    DIV             reduce using rule 32 (expression -> BOOLEAN .)
    IN              reduce using rule 32 (expression -> BOOLEAN .)
    CONC            reduce using rule 32 (expression -> BOOLEAN .)
    LESS            reduce using rule 32 (expression -> BOOLEAN .)
    MORE            reduce using rule 32 (expression -> BOOLEAN .)
    EQUAL           reduce using rule 32 (expression -> BOOLEAN .)
    NOTEQUAL        reduce using rule 32 (expression -> BOOLEAN .)
    LESSE           reduce using rule 32 (expression -> BOOLEAN .)
    MOREE           reduce using rule 32 (expression -> BOOLEAN .)
    ANDALSO         reduce using rule 32 (expression -> BOOLEAN .)
    ORELSE          reduce using rule 32 (expression -> BOOLEAN .)
    SEMI            reduce using rule 32 (expression -> BOOLEAN .)
    $end            reduce using rule 32 (expression -> BOOLEAN .)
    RPAREN          reduce using rule 32 (expression -> BOOLEAN .)
    COMMA           reduce using rule 32 (expression -> BOOLEAN .)
    LPAREN          reduce using rule 32 (expression -> BOOLEAN .)
    RBRACKET        reduce using rule 32 (expression -> BOOLEAN .)


state 11

    (3) expression -> expression LBRACKET . expression RBRACKET
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . POUND expression tuple
    (3) expression -> . expression LBRACKET expression RBRACKET
    (4) expression -> . list
    (5) expression -> . tuple
    (12) expression -> . NOT expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EXP expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression IN expression
    (21) expression -> . expression CONC expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression EQUAL expression
    (25) expression -> . expression NOTEQUAL expression
    (26) expression -> . expression LESSE expression
    (27) expression -> . expression MOREE expression
    (28) expression -> . expression ANDALSO expression
    (29) expression -> . expression ORELSE expression
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . BOOLEAN
    (33) expression -> . expression SEMI
    (8) list -> . LBRACKET series RBRACKET
    (9) list -> . LBRACKET RBRACKET
    (10) tuple -> . LPAREN series RPAREN
    (11) tuple -> . LPAREN RPAREN

    LPAREN          shift and go to state 2
    POUND           shift and go to state 3
    NOT             shift and go to state 7
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    BOOLEAN         shift and go to state 10
    LBRACKET        shift and go to state 5

    expression                     shift and go to state 38
    tuple                          shift and go to state 4
    list                           shift and go to state 6

state 12

    (13) expression -> expression PLUS . expression
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . POUND expression tuple
    (3) expression -> . expression LBRACKET expression RBRACKET
    (4) expression -> . list
    (5) expression -> . tuple
    (12) expression -> . NOT expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EXP expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression IN expression
    (21) expression -> . expression CONC expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression EQUAL expression
    (25) expression -> . expression NOTEQUAL expression
    (26) expression -> . expression LESSE expression
    (27) expression -> . expression MOREE expression
    (28) expression -> . expression ANDALSO expression
    (29) expression -> . expression ORELSE expression
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . BOOLEAN
    (33) expression -> . expression SEMI
    (8) list -> . LBRACKET series RBRACKET
    (9) list -> . LBRACKET RBRACKET
    (10) tuple -> . LPAREN series RPAREN
    (11) tuple -> . LPAREN RPAREN

    LPAREN          shift and go to state 2
    POUND           shift and go to state 3
    NOT             shift and go to state 7
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    BOOLEAN         shift and go to state 10
    LBRACKET        shift and go to state 5

    expression                     shift and go to state 39
    tuple                          shift and go to state 4
    list                           shift and go to state 6

state 13

    (14) expression -> expression MINUS . expression
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . POUND expression tuple
    (3) expression -> . expression LBRACKET expression RBRACKET
    (4) expression -> . list
    (5) expression -> . tuple
    (12) expression -> . NOT expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EXP expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression IN expression
    (21) expression -> . expression CONC expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression EQUAL expression
    (25) expression -> . expression NOTEQUAL expression
    (26) expression -> . expression LESSE expression
    (27) expression -> . expression MOREE expression
    (28) expression -> . expression ANDALSO expression
    (29) expression -> . expression ORELSE expression
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . BOOLEAN
    (33) expression -> . expression SEMI
    (8) list -> . LBRACKET series RBRACKET
    (9) list -> . LBRACKET RBRACKET
    (10) tuple -> . LPAREN series RPAREN
    (11) tuple -> . LPAREN RPAREN

    LPAREN          shift and go to state 2
    POUND           shift and go to state 3
    NOT             shift and go to state 7
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    BOOLEAN         shift and go to state 10
    LBRACKET        shift and go to state 5

    expression                     shift and go to state 40
    tuple                          shift and go to state 4
    list                           shift and go to state 6

state 14

    (15) expression -> expression TIMES . expression
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . POUND expression tuple
    (3) expression -> . expression LBRACKET expression RBRACKET
    (4) expression -> . list
    (5) expression -> . tuple
    (12) expression -> . NOT expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EXP expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression IN expression
    (21) expression -> . expression CONC expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression EQUAL expression
    (25) expression -> . expression NOTEQUAL expression
    (26) expression -> . expression LESSE expression
    (27) expression -> . expression MOREE expression
    (28) expression -> . expression ANDALSO expression
    (29) expression -> . expression ORELSE expression
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . BOOLEAN
    (33) expression -> . expression SEMI
    (8) list -> . LBRACKET series RBRACKET
    (9) list -> . LBRACKET RBRACKET
    (10) tuple -> . LPAREN series RPAREN
    (11) tuple -> . LPAREN RPAREN

    LPAREN          shift and go to state 2
    POUND           shift and go to state 3
    NOT             shift and go to state 7
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    BOOLEAN         shift and go to state 10
    LBRACKET        shift and go to state 5

    expression                     shift and go to state 41
    tuple                          shift and go to state 4
    list                           shift and go to state 6

state 15

    (16) expression -> expression DIVIDE . expression
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . POUND expression tuple
    (3) expression -> . expression LBRACKET expression RBRACKET
    (4) expression -> . list
    (5) expression -> . tuple
    (12) expression -> . NOT expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EXP expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression IN expression
    (21) expression -> . expression CONC expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression EQUAL expression
    (25) expression -> . expression NOTEQUAL expression
    (26) expression -> . expression LESSE expression
    (27) expression -> . expression MOREE expression
    (28) expression -> . expression ANDALSO expression
    (29) expression -> . expression ORELSE expression
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . BOOLEAN
    (33) expression -> . expression SEMI
    (8) list -> . LBRACKET series RBRACKET
    (9) list -> . LBRACKET RBRACKET
    (10) tuple -> . LPAREN series RPAREN
    (11) tuple -> . LPAREN RPAREN

    LPAREN          shift and go to state 2
    POUND           shift and go to state 3
    NOT             shift and go to state 7
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    BOOLEAN         shift and go to state 10
    LBRACKET        shift and go to state 5

    expression                     shift and go to state 42
    tuple                          shift and go to state 4
    list                           shift and go to state 6

state 16

    (17) expression -> expression EXP . expression
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . POUND expression tuple
    (3) expression -> . expression LBRACKET expression RBRACKET
    (4) expression -> . list
    (5) expression -> . tuple
    (12) expression -> . NOT expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EXP expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression IN expression
    (21) expression -> . expression CONC expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression EQUAL expression
    (25) expression -> . expression NOTEQUAL expression
    (26) expression -> . expression LESSE expression
    (27) expression -> . expression MOREE expression
    (28) expression -> . expression ANDALSO expression
    (29) expression -> . expression ORELSE expression
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . BOOLEAN
    (33) expression -> . expression SEMI
    (8) list -> . LBRACKET series RBRACKET
    (9) list -> . LBRACKET RBRACKET
    (10) tuple -> . LPAREN series RPAREN
    (11) tuple -> . LPAREN RPAREN

    LPAREN          shift and go to state 2
    POUND           shift and go to state 3
    NOT             shift and go to state 7
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    BOOLEAN         shift and go to state 10
    LBRACKET        shift and go to state 5

    expression                     shift and go to state 43
    tuple                          shift and go to state 4
    list                           shift and go to state 6

state 17

    (18) expression -> expression MOD . expression
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . POUND expression tuple
    (3) expression -> . expression LBRACKET expression RBRACKET
    (4) expression -> . list
    (5) expression -> . tuple
    (12) expression -> . NOT expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EXP expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression IN expression
    (21) expression -> . expression CONC expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression EQUAL expression
    (25) expression -> . expression NOTEQUAL expression
    (26) expression -> . expression LESSE expression
    (27) expression -> . expression MOREE expression
    (28) expression -> . expression ANDALSO expression
    (29) expression -> . expression ORELSE expression
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . BOOLEAN
    (33) expression -> . expression SEMI
    (8) list -> . LBRACKET series RBRACKET
    (9) list -> . LBRACKET RBRACKET
    (10) tuple -> . LPAREN series RPAREN
    (11) tuple -> . LPAREN RPAREN

    LPAREN          shift and go to state 2
    POUND           shift and go to state 3
    NOT             shift and go to state 7
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    BOOLEAN         shift and go to state 10
    LBRACKET        shift and go to state 5

    expression                     shift and go to state 44
    tuple                          shift and go to state 4
    list                           shift and go to state 6

state 18

    (19) expression -> expression DIV . expression
    (1) expression -> . LPAREN expression RPAREN
    (2) expression -> . POUND expression tuple
    (3) expression -> . expression LBRACKET expression RBRACKET
    (4) expression -> . list
    (5) expression -> . tuple
    (12) expression -> . NOT expression
    (13) expression -> . expression PLUS expression
    (14) expression -> . expression MINUS expression
    (15) expression -> . expression TIMES expression
    (16) expression -> . expression DIVIDE expression
    (17) expression -> . expression EXP expression
    (18) expression -> . expression MOD expression
    (19) expression -> . expression DIV expression
    (20) expression -> . expression IN expression
    (21) expression -> . expression CONC expression
    (22) expression -> . expression LESS expression
    (23) expression -> . expression MORE expression
    (24) expression -> . expression EQUAL expression
    (25) expression -> . expression NOTEQUAL expression
    (26) expression -> . expression LESSE expression
    (27) expression -> . expression MOREE expression
    (28) expression -> . expression ANDALSO expression
    (29) expression -> . expression ORELSE expression
    (30) expression -> . NUMBER
    (31) expression -> . STRING
    (32) expression -> . BOOLEAN
    (33) expression -> . expression SEMI
    (8) list -> . LBRACKET series RBRACKET
    (9) list -> . LBRACKET RBRACKET
    (10) tuple -> . LPAREN series RPAREN
    (11) tuple -> . LPAREN RPAREN

    LPAREN          shift and go to state 2
    POUND           shift and go to state 3
    NOT             shift and go to state 7
    NUMBER          shift and go to state 8
    STRING          shift and go to state 9
    BOOLEAN         shift and go to state 10
    LBRACKET        shift and go to state 5
